# ask-terminal

./: .gitignore  MANIFEST.in  Makefile  README.md  dockerfile  pyproject.toml  requirements.txt
ask_terminal/: app.py  ask_terminal.py  server.py  settings.py
ask_terminal/libs/: text_completion_endpoint.py
ask_terminal/utils/: configs.py
chat_terminal/: app.py  chat_terminal.py  configs.py  main.py  server.py  settings.py  text_completion_endpoint.py
chat_terminal/libs/: text_completion_endpoint.py  utils.py
chat_terminal/utils/: __init__.py  debug_mode.py  logging.py  misc.py
configs/: ask_terminal.yaml  chat_terminal.json  chat_terminal.yaml
docker/: client.dockerfile  local-bash.dockerfile  server.dockerfile
prompts/: ask-terminal.mext  chat-terminal.mext  chat-terminal.txt
services/: ask-terminal-server.service  chat-terminal-server.service
shell-client/: ask-terminal.sh  chat-terminal.sh
