[project]
name = "ask-terminal"
version = "0.1.4"
authors = [
  { name = "Dongning Chen", email = "donny.hikari@gmail.com" },
]
description = "Chat with your terminal, getting things done using natural langauge."
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
  "pyyaml>=5.1",
  "fastapi>=0.115.2",
  "uvicorn>=0.31.1",
  "pydantic>=2.5.3",
  "mext-lang>=0.1.1",
  "aiohttp>=3.9.1",

  "transformers>=4.36.2",
  "openai>=1.7.1",
  "anthropic>=0.36.2",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/donny-hikari/ask-terminal"
Repository = "https://github.com/donny-hikari/ask-terminal"

[project.scripts]
ask-terminal-server = "ask_terminal.server:main"

[tool.setuptools]
packages = ["ask_terminal"]

[tool.setuptools.package-data]
ask_terminal = ["utils/*", "libs/*"]

[build-system]
requires = ["setuptools>=51", "wheel"]
build-backend = "setuptools.build_meta"
